# MarinePoC

./: .gitignore  CMakeLists.txt  README.md  run.sh
api/: requirements.txt
api/port_tariff_agent/: __init__.py  server.py
api/port_tariff_agent/agents/: __init__.py  research_agent.py  rule_extraction_agent.py
api/port_tariff_agent/tools/: __init__.py  document_tools.py  tariff_tool_factory.py
core/include/nbot_lite/: CoreCli.hpp  DocumentClassifier.hpp  FormulaEvaluator.hpp  JsonUtil.hpp  PlanGraph.hpp  PromptBuilder.hpp  RuleMatcher.hpp  TariffEngine.hpp
core/src/: CoreCli.cpp  DocumentClassifier.cpp  FormulaEvaluator.cpp  JsonUtil.cpp  PlanGraph.cpp  PromptBuilder.cpp  RuleMatcher.cpp  TariffEngine.cpp  main.cpp
data/: agent_graph.json  empty_rule_pack.template.json  empty_vessel.template.json  model_providers.example.json
docs/: USER_FLOW_AND_ARCHITECTURE.md
prompts/: research_agent.md  rule_extraction_agent.md  validation_agent.md
scripts/: build_architecture_pdf.py  dev.sh  extract_rule_candidates.py  stop.sh  validate_rotterdam_examples.py
tests/fixtures/: rotterdam_2026_annex2_examples.rule_pack.json  rotterdam_2026_annex2_examples.vessels.json
web/: index.html  package.json  vite.config.js
web/src/: App.jsx  styles.css
